[pubs] UDIR IEEE CAL.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,17 @@
           <br>
           Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
           <br>
+          IEEE CAL 2024
+          <br>
+          [<a title="2024.cal.udir - doi" href="https://doi.org/10.1109/LCA.2023.3342130">doi</a>]
+        </li>
+
+        <br>
+        <li>
+          <strong>UDIR: Towards a Unified Compiler Framework for Reconfigurable Dataflow Architectures</strong>
+          <br>
+          Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
+          <br>
           WDDSA @ MICRO 2023
           <br>
           [<a title="2023.wddsa.udir - pdf" href="papers/2023.wddsa.udir.pdf">pdf</a>]
