[cv, pubs] MICRO 2024 papers.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
       <ul class="publication-list">
 
         <li>
+          <strong>Tyr: Taming Dataflow Parallelism for Better Locality</strong>
+          <br>
+          Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
+          <br>
+          MICRO 2024
+        </li>
+
+        <br>
+        <li>
+          <strong>Leviathan: A Unified System for General-Purpose Near-Data Computing</strong>
+          <br>
+          <em>Brian C. Schwedock</em>, Nathan Beckmann
+          <br>
+          MICRO 2024
+        </li>
+
+        <br>
+        <li>
           <strong>UDIR: Towards a Unified Compiler Framework for Reconfigurable Dataflow Architectures</strong>
           <br>
           Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
