[pubs] Updated Tyr.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <ul class="publication-list">
 
         <li>
-          <strong>Tyr: Taming Dataflow Parallelism for Better Locality</strong>
+          <strong>The Tyr Dataflow Architecture: Improving Locality by Taming Parallelism</strong>
           <br>
           Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
           <br>
