[pubs] Leviathan pdf.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
           <em>Brian C. Schwedock</em>, Nathan Beckmann
           <br>
           MICRO 2024
+          <br>
+          [<a title="2024.micro.leviathan - pdf" href="papers/2024.micro.leviathan.pdf">pdf</a>]
         </li>
 
         <br>
