[pubs] Tyr pdf.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
           Nikhil Agarwal, Mitchell Fream, Souradip Ghosh, <em>Brian C. Schwedock</em>, Nathan Beckmann
           <br>
           MICRO 2024
+          <br>
+          [<a title="2024.micro.tyr - pdf" href="papers/2024.micro.tyr.pdf">pdf</a>]
         </li>
 
         <br>
