[pubs] MICRO 2024 DOIs.

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <br>
           MICRO 2024
           <br>
+          [<a title="2024.micro.tyr - doi" href="https://doi.org/10.1109/MICRO61859.2024.00089">doi</a>]
           [<a title="2024.micro.tyr - pdf" href="papers/2024.micro.tyr.pdf">pdf</a>]
         </li>
 
@@ -137,6 +138,7 @@
           <br>
           MICRO 2024
           <br>
+          [<a title="2023.micro.leviathan - doi" href="https://doi.org/10.1109/MICRO61859.2024.00095">doi</a>]
           [<a title="2024.micro.leviathan - pdf" href="papers/2024.micro.leviathan.pdf">pdf</a>]
         </li>
 
