--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
       </div>
     </nav>
 
-    <!-- Container (About Section) -->
-    <div id="about" class="container-fluid bg-grey">
+    <div class="container-fluid bg-grey">
       <div class="row">
         <div class="wrapper">
 
@@ -55,7 +54,9 @@
           </div>
 
           <div class="col-sm-8">
-            <div class="about-content">
+
+            <!-- Container (About Section) -->
+            <div id="about" class="about-content">
               <h2>About Me</h2>
               <br>
               <h4>I am currently an SoC Architect at
@@ -66,33 +67,37 @@
                 Beckmann</a> in the <a href="https://cmu-corgi.github.io/">CORGi
                 research group</a>.</h4>
             </div>
+
+            <!-- Container (Research Section) -->
+            <div id="research" class="about-content">
+              <h2>Research</h2>
+              <br>
+              <h4>My research interests broadly include computer architecture
+                and computer systems, with an emphasis on memory systems and
+                data movement. My <a title="Optimizing Data Movement Through
+                Software Control of General-Purpose Hardware Caches"
+                href="papers/phd_dissertation.pdf">PhD dissertation</a> tackled
+                the data-movement challenge by proposing systems that move
+                compute closer to data and data closer to compute. As a research
+                intern at Google, I optimized in-memory caches for miss ratio,
+                I/O cost, and memory usage. And my research in game theory with
+                the <a href="https://teamcore.seas.harvard.edu/">Teamcore
+                research group</a> contributed
+                to <a href="https://teamcore.seas.harvard.edu/research-paws-protection-assistant-wildlife-security/">
+                PAWS: Protection Assistant for Wildlife Security</a>
+              </h4>
+
+
           </div>
 
         </div>
       </div>
     </div>
 
-    <!-- Container (Research Section) -->
-    <div id="research" class="container-fluid">
-      <h2 class="text-center">Research</h2>
-      <br>
-      <h4>My research interests broadly include computer architecture and
-      computer systems, with an emphasis on memory systems and data
-      movement. My <a title="Optimizing Data Movement Through Software Control
-      of General-Purpose Hardware Caches" href="papers/phd_dissertation.pdf">PhD
-      dissertation</a> tackled the data-movement challenge by proposing systems
-      that move compute closer to data and data closer to compute. As a research
-      intern at Google, I optimized in-memory caches for miss ratio, I/O cost,
-      and memory usage. And my research in game theory with
-      the <a href="https://teamcore.seas.harvard.edu/">Teamcore research
-      group</a> contributed
-      to <a href="https://teamcore.seas.harvard.edu/research-paws-protection-assistant-wildlife-security/">
-      PAWS: Protection Assistant for Wildlife Security</a>
-      </h4>
 
     <!-- Container (Publications Section) -->
-    <div id="publications" class="container-fluid bg-grey">
-      <h2 class="text-center">Publications</h2>
+    <div id="publications" class="container-fluid">
+      <h2>Publications</h2>
       <br>
       <ul class="publication-list">
 
